[project]
name = "graphrag"
version = "0.1.0"
description = "Building a GraphRAG agent using the Neo4j graph database and Milvus vector database. The agent will decide whether to use the vector database, the knowledge graph or a combination of both based on user query."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.3",
    "boto3>=1.36.12",
    "langchain>=0.3.17",
    "langchain-aws>=0.2.12",
    "langchain-community>=0.3.16",
    "langchain-experimental>=0.3.4",
    "langchain-milvus>=0.1.8",
    "langchain-neo4j>=0.3.0",
    "langchain-text-splitters>=0.3.5",
    "langgraph>=0.2.69",
    "neo4j>=5.27.0",
    "notebook>=7.3.2",
    "pymilvus>=2.5.4",
    "tiktoken>=0.8.0",
]
